assets/css/react-modal.css
/*
Copy default styles to be able to use CSS classes
@see https://github.com/reactjs/react-modal/tree/master/docs/styles
*/
.ReactModal__Overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
}

.ReactModal__Content {
  position: absolute;
  top: 50%;
  left: 50%;
  right: auto;
  bottom: auto;
  overflow: auto;
  background-color: var(--color-neutral-50);
  outline: none;
  padding: 1rem;
  margin-right: -50%;
  transform: translate(-50%, -50%);
}

.ReactModal__Content__body {
  margin: 1.5rem 0;
}

.ReactModal__Content__buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  gap: 0.5rem;
}

/*
Prevent scroll
https://github.com/reactjs/react-modal/blob/master/docs/styles/classes.md#for-the-documentbody-and-html-tag
*/
.ReactModal__Body--open {
  overflow: hidden;
}

.ReactModal__Content {
  min-width: 60%;
  border-width: 1px;
  border-style: solid;
  border-color: var(--color-neutral-200);
  padding: 15px;
  max-height: calc(100vh - 30px);
}

